# SPL

./: .gitignore  CMakeLists.txt  ConsoleSubOp.h  Constants.h  Dynamic.h  ErrorStream.h  Float.h  Int.h  Keyword.h  README.md  RNG.h  SPLErrors.h  SPLProject.rc  SPLProject.sln  SPLProject.vcxproj  SPLProject.vcxproj.filters  Stack.h  String.h  Vector2.cpp  Vector2.h  bytecode.md  clc.bat  clc.py  main.cpp  resource.h  rom.h  test.spl
Demos/: InputType.txt  ball.spl  pattern2.spl  pattern3.spl
Installer/SPLInstaller/: ConfirmationAndInput.cs  InstallTask.cs  InstallationProcess.cs  Main.cs  SPLInstaller.csproj  SPLInstaller.sln  Shortcut.cs  content.pkg
Installer/SPLInstaller/Graphics/: ProgressBar.cs
Installer/SPLInstaller/Properties/: Resources.Designer.cs  Resources.resx
Misc/VersionController/VersionController/: Program.cs  VersionController.sln
SPL/Compiler/Analyser/: SemanticAnalyser.cpp  SemanticAnalyser.h
SPL/Compiler/Assembling/: Assembler.cpp  Assembler.h
SPL/Compiler/Optimising/: Optimiser.cpp  Optimiser.h
SPL/Compiler/Parsing/: Parser.cpp  Parser.h
SPL/Compiler/Parsing/Nodes/: Block.cpp  Block.h  Condition.h  Console.h  Constant.h  Free.cpp  Free.h  Input.h  IsFloat.h  IsInt.h  Let.cpp  Let.h  Node.cpp  Node.h  Pass.h  Raise.h  RandomNode.h  Single.cpp  Single.h  Sleep.h  Value.cpp  Value.h
SPL/Compiler/Parsing/Nodes/Casting/: ToFloat.h  ToInt.h  ToString.h
SPL/Compiler/Parsing/Nodes/Comparisons/: Comparison.h  Equ.h  Grt.h  GrtEqu.h  Lwr.h  LwrEqu.h  Neq.h
SPL/Compiler/Parsing/Nodes/ControlFlow/: Block.h  Call.cpp  Call.h  Exit.cpp  Exit.h  Goto.cpp  Goto.h  If.h  Ret.h
SPL/Compiler/Parsing/Nodes/Maths/: Add.h  Concat.h  Dec.h  Div.h  Inc.h  Mod.h  Mul.h  Pow.h  Sub.h
SPL/Compiler/Parsing/Nodes/Output/: Print.cpp  Print.h
SPL/Compiler/Parsing/Nodes/Stack/: Pop.h  Push.cpp  Push.h  SetPop.cpp  SetPop.h
SPL/Compiler/PreProcessing/: PreProcessor.cpp  PreProcessor.h
SPL/Compiler/Tokenisation/: Lexer.cpp  Lexer.h  Token.cpp  Token.h  TokenType.h
SPL/Disassembling/: Disassembler.cpp  Disassembler.h
SPL/VirtualMachine/: Accumulator.cpp  Accumulator.h  Processor.cpp  Processor.h  ProcessorStack.h  SPLExitCodes.h  VariableData.cpp  VariableData.h
Uninstaller/SPLUninstaller/: Program.cs  SPLUninstaller.csproj  SPLUninstaller.sln
